--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: halis;
+    src: url(fonts/halis-100.ttf);
+    font-weight: 100;
+}
+@font-face {
+    font-family: halis;
+    src: url(fonts/halis-500.ttf);
+    font-weight: 500;
+}
+@font-face {
+    font-family: halis;
+    src: url(fonts/halis-700.ttf);
+    font-weight: 700;
+}
+@font-face {
+    font-family: halis;
+    src: url(fonts/halis-900.ttf);
+    font-weight: 900;
+}
+
 html, body {
   box-sizing: border-box;
   height: 100%;
@@ -7,6 +28,8 @@ html, body {
 }
 
 body {
+  font-family: halis, Arial, sans-serif;
+  font-size: 12px;
   overflow-y: scroll;
 }
 
@@ -36,12 +59,22 @@ body {
   background-color: #CCC;
 }
 
+.item .city-state {
+  font-weight: 900;
+  padding-top: 1em;
+}
+
+.item .current {
+  padding-bottom: 1em;
+}
+
 /* Expanded */
 .hi,
 .low {
   background-color: #7DE5FF;
   float: left;
   width: 50%;
+  height: 50px;
 }
 
 .hi {
@@ -87,6 +120,7 @@ body {
   height: auto;
   padding: auto;
 }
+
 .item {
   box-sizing: border-box;
   height: 100px;
@@ -99,20 +133,36 @@ body {
   transition: all 1s;
   height: 100%;
 }
-/*.item.active:nth-child(2) {
-  top: -100px;
+
+.home-menu.active .item {
+  opacity: 0;
+  height: 0;
+  padding: 0;
 }
-.item.active:nth-child(3) {
-  top: -200px;
-}
-*/
 .home-menu.active .item.active {
   opacity: 1;
   height: auto;
   padding: 1em 0 0;
 }
-.home-menu.active .item {
+
+.item .current .weather-description .description{
   opacity: 0;
-  height: 0;
-  padding: 0;
+  width: 0;
+}
+.item.active .current .weather-description .description{
+  opacity: 1;
+  width: 100%;
+}
+.item .current .weather-description .icon {
+  background-image: url(images/icons.svg);
+}
+
+.item.active .current .weather-temp {
+  font-size: 32px;
+  line-height: 72px;
+  vertical-align: top;
+}
+.item.active .current .weather-temp .num {
+  font-size: 72px;
+  font-weight: 700;
 }
